methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:18: error: ';' expected but 'return' found.
} return false
  ^